--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -41,10 +41,6 @@
     --gps-color-bg: #f6f6f3;                                                             /* Default page background */
     --gps-color-bg-light: #ecebe6;                                                       /* Section backgrounds, cards, or content boxes */
     --gps-color-bg-dark: #dddcd6;                                                        /* Dark sections, footers, or navbars */
-    
-    --gps-color-nav-bg: #2c2c2c;                                                         /* Navigation bar background */
-    --gps-color-nav-text: #ffffff;                                                       /* Footers, dark sections, headers */
- 
 
     /* Special */
     --gps-color-gradient: linear-gradient(to right, #ffffff, #fefefe, #fcfcfc);
@@ -62,9 +58,6 @@
     --gps-color-bg: #0A0A0A;
     --gps-color-bg-dark: #1e1e1e;
     --gps-color-bg-light: #262626;
-
-    --gps-color-nav-bg: #1e1e1e;
-    --gps-color-nav-text: #ffffff;
 
     --gps-color-gradient: linear-gradient(to right, #0f0f0f, #1a1a1a, #262626);
 
